# hide-and-seek-game-theory

./: .gitignore  CMakeLists.txt  Makefile  README.md  commit.txt  hideseek.sh
include/: constants.h  macros.h  main.h
include/game_logic/: logic.h  score.h
include/game_logic/ai_characters/: hider.h  seeker.h
include/gui/: game_engine.h  game_menu.h  main_menu.h  map_setup.h  menu_textures_manager.h  textures.h  textures_manager.h
include/gui/game/: events_manager.h  game_engine.h  textures.h  textures_manager.h
include/gui/game_flow/: boundries.h  map_setup.h
include/gui/menu/: main_menu.h  menu_event_manager.h  menu_textures_manager.h
include/gui/sidemenu/: sidemenu.h
include/simulation/: simulation.h
src/: main.c
src/game_logic/: logic.c  score.c
src/game_logic/ai_characters/: hider.c  seeker.c
src/gui/: game_engine.c  game_menu.c  map_setup.c  textures_manager.c
src/gui/game/: game_engine.c  game_events_manager.c  game_textures_manager.c
src/gui/game_flow/: map_setup.c
src/gui/menu/: main_menu.c  menu_event_manager.c  menu_textures_manager.c
src/gui/sidemenu/: sidemenu.c
src/simulation/: simulation.c
test/: tset.c
